Started testing service implementaiton against ROS tutorials and found that the TCPROS spec is different (in an undocumented way) for services. Services send an extra byte when replying to an incoming message that indicates whether an error occured. Errors are always returned as strings. This add support for the extra byte but adds a lot of duplicated code. In addition, this moves services into their own package since it has become clear that they are not considered as or treated as topics in practice. There is also a temporary Experiment binary that simply tries to use an AddTwoInts service.